# ACustom-Boilerplate

./: .gitignore  Cargo.toml  README.md
src/: main.rs  manager.rs  pathing.rs
src/manager/: dependency.rs
templates/formatters_and_linters/: .eslintrc.js  .prettierrc.js
templates/root/: package.json  tsconfig.json
