[package]
name = "cli_application"
author = "Luca Michael Schmidt"
mail = "schmidt.lucamichael@icloud.com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.10"
dialoguer = "0.10.0"
colored = "2"
